tests/valid/function/generic_identity_def.facet
fn id<T>(x: affine T) -> affine T {
  x
}

