tests/invalid/struct/struct_arity_mismatch.facet
struct Box<T> {
  value: affine T
}

struct Bad {
  value: unrestricted Box
}

fn main() -> unrestricted () {
  ()
}
